--- a/templates/airflow-dags-pvc.yaml
+++ b/templates/airflow-dags-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: airflow-dags
+  namespace: airflow
 spec:
   storageClassName: manual
   accessModes:
